# ce316project

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: SQLite.cpp  SQLite.h  filedialoghelper.cpp  filedialoghelper.h  iae.cpp  iae.h  main.cpp  mainWindow.qml  project.cpp  project.h  sourceCodeHandler.cpp  sourceCodeHandler.h  student.cpp  student.h  zipHandler.cpp  zipHandler.h
src/qml/: CreateNewConfiguration.qml  EditExistingConfig.qml  ExportConfig.qml  ImportConfig.qml  MainWindow.qml  NewProject.qml  RemoveConfig.qml  SQLite.cpp  SQLite.h  filedialoghelper.cpp  filedialoghelper.h  mainWindow.qml
